--- a/src/app/certificados/style.scss
+++ b/src/app/certificados/style.scss
@@ -70,7 +70,7 @@
 
                 .card-info {
                     width: 85vw;
-                    height: 50vh;
+                    height: 30vh;
                 }
             }
         }
@@ -85,7 +85,7 @@
             section {
                 gap: 1rem;
                 .card-info {
-                    width: 85vw;
+                    width: 90vw;
                     height: 20vh;
                 }
             }
@@ -103,8 +103,24 @@
             }
             section {
                 .card-info {
-                    width: 90vw;
-                    height: 12vh;
+                    width: 85vw;
+                    height: 13vh;
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width:1280px) {
+    .container-body {
+        .content {
+            h2 {
+                font-size: 4rem;
+                padding: 2rem 0 0 1rem;
+            }
+            section {
+                .card-info {
+                    width: 40vw;
+                    height: 20vh;
                 }
             }
         }
