--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -1,95 +1,77 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
-.container-home {
-   .content-home {
-      display: grid;
-      background-image: linear-gradient(90deg, #0f0f0fea, #012707);
-      width: 100%;
-      height: 100%;
-      .identify {
-         display: flex;
-         align-items: center;
-         flex-direction: column;
-         grid-column: 1;
-         .sub-line {
-            display:block;
-            background-color: rgba(58, 58, 58, 0.13);
-            height: 17rem;
-            width: 20rem;
-            border-radius: 0 0 30px 30px;
-            ul {
-               li {
-                  margin-left: 1rem;
-                  text-decoration: none;
-                  list-style: none;
+.content-home {
+   background-image: linear-gradient(90deg, #0f0f0fea, #012707);
+   width: 100%;
+   height: 100%;
 
-                  p {
-                     padding-top: 1rem;
-                     color: rgba(255, 255, 255, 0.863);
-                     font-weight: 400;
-                     font-size: 17px;
-                  }
-               }
-            }
-         }
-      }
+   .container_home {
+      width: 100%;
+
       .section-body {
          background-color: rgba(58, 58, 58, 0.13);
-         grid-column: 2;
          width: 100%;
+
          .sec-about {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            justify-items: center;
             padding: 15px;
-            h2 {
-               letter-spacing: 1px;
-               font-size: 30px;
-               color: #fff;
-               font-family: var(--font-IBM);
-               margin-bottom: 1rem;
-               text-shadow: 2px 2px 5px #969696;
-            }
+            gap: 1rem;
 
-            .p-about {
-               text-align: center;
-               font-size: 18px;
-               font-family: var(--font-Poppins);
-               text-indent: 2rem;
-               height: 100%;
-               width: 75vw;
-               color: #fffffff1;
-               background-color: #ffffff13;
-               border-radius: 10px 0 10px 0;
-               box-shadow: 2px 2px 4px #58A149;
-               transition: .4s ease;
-               margin: 0 2rem 0 2rem;
-               padding: 2rem;
+            .about-main {
+               display: flex;
+               flex-direction: column;
+               justify-content: center;
+               align-items: center;
+               justify-items: center;
+               gap: 1rem;
+               position: relative;
 
-               .color-green {
-                  color: #58A149;
+               .p-about {
+                  text-align: center;
+                  font-size: 18px;
+                  font-family: var(--font-Poppins);
+                  text-indent: 2rem;
+                  color: #fffffff1;
+                  height: 100%;
+                  width: 100%;
+                  background-color: #ffffff13;
+                  border-radius: 10px 0 10px 0;
+                  box-shadow: 2px 2px 4px #58A149;
+                  transition: .4s ease;
+                  margin: 0 2rem 0 2rem;
+                  padding: 2rem;
+
+                  .color-green {
+                     color: #58A149;
+                  }
                }
-            }
 
-            .p-about:hover,
-            .p-about-2:hover {
-               box-shadow: 3px 3px 6px #209907;
-            }
+               .p-about:hover,
+               .p-about-2:hover {
+                  box-shadow: 3px 3px 6px #209907;
+               }
 
-            .p-about-2 {
-               height: 100%;
-               width: 75vw;
-               font-family: var(--font-Poppins);
-               text-indent: 30px;
-               text-align: center;
-               color: #fffffff1;
-               font-size: 18px;
-               margin: 1rem 2rem 1rem 2rem;
-               padding: 20px;
-               background-color: #ffffff13;
-               border-radius: 10px 0 10px 0;
-               box-shadow: 2px 2px 4px #58A149;
-               transition: .4s ease;
+               .p-about-2 {
+                  height: 100%;
+                  width: 100%;
+                  font-family: var(--font-Poppins);
+                  text-indent: 30px;
+                  text-align: center;
+                  color: #fffffff1;
+                  font-size: 18px;
+                  margin: 0 2rem 0 2rem;
+                  padding: 2rem;
+                  background-color: #ffffff13;
+                  border-radius: 10px 0 10px 0;
+                  box-shadow: 2px 2px 4px #58A149;
+                  transition: .4s ease;
 
-               .color-green {
-                  color: #58A149;
+                  .color-green {
+                     color: #58A149;
+                  }
                }
             }
          }
@@ -148,7 +130,7 @@
                color: white;
                font-weight: 500;
                font-size: 28px;
-               padding: 20px 0 0 20px;
+               padding: 20px 0 0 510px;
                text-shadow: 2px 2px 5px #969696;
             }
 
@@ -180,7 +162,7 @@
                color: white;
                font-weight: 500;
                font-size: 28px;
-               padding: 20px 0 0 20px;
+               padding: 20px 0 0 510px;
                text-shadow: 2px 2px 5px #969696;
             }
 
@@ -220,67 +202,37 @@
          }
 
          .container-slider {
-            display: inline-block;
+            display: flex;
             flex-direction: column;
-            margin-bottom: 2rem;
+            justify-content: center;
+            justify-items: center;
+            align-items: center;
+            padding: 1rem;
+            width: 100%;
 
             h3 {
                font-family: var(--font-IBM);
                color: white;
                font-weight: 500;
                font-size: 28px;
-               padding: 20px 0 30px 20px;
+               padding: 1rem 0 1rem 0;
                text-shadow: 2px 2px 5px #969696;
             }
          }
       }
    }
 }
+
 @media screen and (max-width:768px) {
-   .container-home {
+   .content-home {
       display: flex;
 
-      .content-home {
+      .container_home {
          display: grid;
          justify-content: center;
          align-items: center;
          justify-items: center;
          width: 100%;
-
-         .identify {
-            grid-column: span 3;
-            display: grid;
-            width: 98%;
-            justify-content: center;
-            align-items: center;
-            margin-bottom: 1rem;
-
-            .sub-line {
-               height: 10rem;
-               width: 20rem;
-               margin: 0 20px 0 20px;
-               border-radius: 0 0 30px 30px;
-               ul {
-                  display: grid;
-                  grid-template-columns: repeat(2,2fr);
-                  justify-content: center;
-                  justify-items: center;
-                  li {
-                     margin-left: 1rem;
-                     text-decoration: none;
-                     list-style: none;
-                     
-                     p {
-                        padding-top: 1rem;
-                        color: rgba(255, 255, 255, 0.863);
-                        font-weight: 400;
-                        font-size: 25px;
-                     }
-                  }
-               }
-
-            }
-         }
 
          .section-body {
             display: flex;
@@ -306,7 +258,7 @@
                .p-about {
                   display: block;
                   text-align: justify;
-                  
+
                   font-size: 28px;
                   width: 75vw;
                   height: 100%;
@@ -339,6 +291,7 @@
                width: 100%;
 
                h3.anima {
+                  padding: 20px 0;
                   animation: none;
                   max-width: 100%;
                   border: none;
@@ -350,6 +303,7 @@
                width: 100%;
 
                h3.anima {
+                  padding: 20px 0;
                   animation: none;
                   max-width: 100%;
                   border: none;
@@ -371,101 +325,157 @@
       }
    }
 }
+
 @media screen and (max-width:480px) {
-   .container-home {
-      display: flex;
-      flex-direction: column;
-      overflow: hidden;
-
-      .content-home {
-         .identify {
-            grid-column: 1;
-            justify-content: center;
-            align-items: center;
-            justify-items: center;
-         }
-
+   .content-home {
+      .container_home {
          .section-body {
-            display: grid;
-            grid-column: 1;
-            grid-template-columns: repeat(1, 4fr);
-            .sec-about{
-               .p-about {
-                  width: 75vw;
-                  height: 100%;
-                  font-size: 17px;
-               }
-               .p-about-2 {
-                  text-align: justify;
-                  font-size: 17px;
-                  width: 75vw;
-                  height: 13vh;
-                  margin: 2rem 0 2rem 0;;
-               }
+            .sec-about {
+               flex-direction: column;
+               padding: 15px;
+               gap: 1rem;
+
+               .p-about {}
+
+               .p-about-2 {}
             }
 
             .list-frame {
-               flex-direction: column;
+               display: grid;
+               margin: 2rem 0;
+               justify-items: center;
+               grid-template-columns: repeat(2, 2fr);
                gap: 0;
             }
 
             .list-apis {
-               display: flex;
-               ;
-               flex-direction: column;
+               text-align: center;
+
+               h3.anima {
+                  display: block;
+                  padding: 0;
+                  border-right: 2px solid #777777;
+                  max-width: 100%;
+                  border: none;
+                  white-space: nowrap;
+                  overflow: hidden;
+                  animation: none;
+               }
             }
 
-            .list-sites {}
+            .list-sites {
+               text-align: center;
+
+               h3.anima {
+                  display: block;
+                  padding: 0;
+                  border-right: 2px solid #777777;
+                  max-width: 100%;
+                  border: none;
+                  white-space: nowrap;
+                  overflow: hidden;
+                  animation: none;
+               }
+            }
+
+            .container-slider {
+               display: none;
+            }
+
+            .container-landing {
+               display: block;
+               text-align: center;
+            }
          }
       }
    }
 }
+
 @media screen and (max-width:320px) {
-   .container-home {
-      .content-home {
-         .identify {
-            
-         }
+   .content-home {
+      .container_home {
          .section-body {
-            display: grid;
-            grid-column: 1;
-            grid-template-columns: repeat(1, 2fr);
-            .sec-about{
-               .p-about {
-                  width: 85vw;
-                  height: 100%;
-                  font-size: 18px;
-               }
-               .p-about-2 {
-                  text-align: justify;
-                  font-size: 18px;
-                  width: 85vw;
-                  height: 13vh;
-                  margin: 2rem 0 2rem 0;
-               }
+            .sec-about {
+               flex-direction: column;
+               padding: 15px;
+               gap: 1rem;
+
+               .p-about {}
+
+               .p-about-2 {}
             }
 
             .list-frame {
-               grid-template-columns: repeat(2,2fr);
+               grid-template-columns: repeat(2, 2fr);
                gap: 0;
             }
 
             .list-apis {
-               display: flex;
-               ;
-               flex-direction: column;
+               text-align: center;
+
+               h3.anima {
+                  display: block;
+                  padding: 0;
+                  border-right: 2px solid #777777;
+                  max-width: 100%;
+                  border: none;
+                  white-space: nowrap;
+                  overflow: hidden;
+                  animation: none;
+               }
             }
 
-            .list-sites {}
+            .list-sites {
+               text-align: center;
+
+               h3.anima {
+                  display: block;
+                  padding: 0;
+                  border-right: 2px solid #777777;
+                  max-width: 100%;
+                  border: none;
+                  white-space: nowrap;
+                  overflow: hidden;
+                  animation: none;
+               }
+            }
+
+            .container-slider {
+               display: none;
+            }
+
+            .container-landing {
+               display: block;
+               text-align: center;
+            }
          }
       }
    }
 }
-@media screen and (min-width:769) {
-   .container-home{
-      .content-home{
-         .section-body{
 
+@media screen and (max-width:1280px) {
+   .content-home {
+      .container_home {
+         .section-body {
+            .list-sites{
+               text-align: center;
+               h3{
+                  padding: 0;
+               }
+            }
+            .list-apis{
+               text-align: center;
+               h3{
+                  padding: 0;
+               }
+            }
+            .container-slider {
+               display: none;
+            }
+            .container-landing {
+               text-align: center;
+               display: block;
+            }
          }
       }
    }
