--- a/src/components/Slider/slider.css
+++ b/src/components/Slider/slider.css
@@ -1,39 +1,32 @@
-.container-slider {
-  display: block;
-  width: 81rem;
-  height: 50rem;
-  margin: 3rem 0 0 0;
-}
-
 .slider {
-  display: flex;
-  width: 100%;
-  height: 100%;
   overflow: hidden;
   position: relative;
-  margin-top: -50px;
-  margin-left: 65px;
+  height: 80vh;
+  width: 100%;
 }
 .slider .list .item {
-  width: 50rem;
-  height: 50rem;
+  width: 100%;
+  height: 100%;
   position: absolute;
   inset: 0 0 0 0;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .slider .list .item img {
+  width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   display: flex;
   filter: blur(5px);
 }
 .slider .list .item .content {
+  width: 1120px;
   position: absolute;
   top: 20%;
-  width: 1140px;
   max-width: 80%;
   left: 50%;
+  padding-right: 40%;
   transform: translateX(-50%);
-  padding-right: 30%;
   box-sizing: border-box;
   color: #fff;
   text-shadow: 0 5px 10px rgba(0, 0, 0, 0.2666666667);
@@ -98,9 +91,7 @@
   gap: 20px;
   position: absolute;
   bottom: 30px;
-  left: 48%;
-  width: -moz-max-content;
-  width: max-content;
+  left: 50%;
   z-index: 100;
 }
 .slider .thumbnail .item {
@@ -268,7 +259,7 @@
     width: 150px;
     height: 220px;
     bottom: 50px;
-    left: 80%;
+    left: 50%;
     border-radius: 20px;
   }
 }
@@ -295,11 +286,19 @@
     opacity: 0;
   }
 }
-@media screen and (max-width: 678px) {
+@media screen and (max-width: 768px) {
   .slider .list .item .content {
     padding-right: 0;
   }
   .slider .list .item .content .title {
     font-size: 30px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .slider .list .item img {
+    height: 100%;
+  }
+  .slider .thumbnail {
+    left: 46%;
   }
 }/*# sourceMappingURL=slider.css.map */
