--- a/src/components/Slider/slider.scss
+++ b/src/components/Slider/slider.scss
@@ -1,40 +1,31 @@
-.container-slider {
-    display:block;
-    width: 81rem;
-    height: 50rem;
-    margin: 3rem 0 0 0;
-}
-
 .slider {
-    display: flex;
-    width: 100%;
-    height: 100%;
     overflow: hidden;
     position: relative;
-    margin-top: -50px;
-    margin-left: 65px;
-
+    height: 80vh;
+    width: 100%;
     .list {
         .item {
-            width: 50rem;
-            height: 50rem;
+            width: 100%;
+            height: 100%;
             position: absolute;
             inset: 0 0 0 0;
+            object-fit: cover;
 
             img {
+                width: 100%;
                 object-fit: cover;
                 display: flex;
                 filter: blur(5px);
             }
 
             .content {
+                width: 1120px;
                 position: absolute;
                 top: 20%;
-                width: 1140px;
                 max-width: 80%;
                 left: 50%;
+                padding-right: 40%;
                 transform: translateX(-50%);
-                padding-right: 30%;
                 box-sizing: border-box;
                 color: #fff;
                 text-shadow: 0 5px 10px #0004;
@@ -109,8 +100,7 @@
         gap: 20px;
         position: absolute;
         bottom: 30px;
-        left: 48%;
-        width: max-content;
+        left: 50%;
         z-index: 100;
 
         .item {
@@ -297,7 +287,7 @@
         width: 150px;
         height: 220px;
         bottom: 50px;
-        left: 80%;
+        left: 50%;
         border-radius: 20px;
     }
 }
@@ -326,12 +316,40 @@
     }
 }
 
-@media screen and (max-width: 678px) {
+@media screen and (max-width: 768px) {
     .slider .list .item .content {
         padding-right: 0;
     }
 
     .slider .list .item .content .title {
         font-size: 30px;
+    }
+}
+@media screen and (min-width: 1280px) {
+    .slider{
+        .list{
+            .item{
+                img{
+                    height: 100%;
+                }
+                .content{
+
+                }
+            }
+        }
+        .thumbnail{
+            
+            left: 46%;
+            .item{
+                img{
+    
+                }
+            }
+        }
+        .nextPrevArrows{
+            button{
+
+            }
+        }
     }
 }
