--- a/src/components/Works/W_Sites/sites.scss
+++ b/src/components/Works/W_Sites/sites.scss
@@ -1,25 +1,39 @@
-.section-img {
+ .section-img {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 3rem;
+    gap: 1rem;
 
     .img-cole {
-        display: flex;
-        gap: 1rem;
-        margin: 2rem;
+       display: flex;
+       gap: 1rem;
+       margin: 2rem;
 
-        .content-colection {
-            .content-image {
-                border-radius: 20px 0 0 0;
-                position: relative;
-                display: flex;
-                background-color: rgb(59, 59, 59);
-                justify-content: center;
-                align-items: center;
-                height: 16rem;
-                width: 13rem;
-            }
-        }
+       .content-colection {
+          .content-image {
+             border-radius: 20px 0 0 0;
+             position: relative;
+             display: flex;
+             background-color: rgb(59, 59, 59);
+             justify-content: center;
+             align-items: center;
+             height: 16rem;
+             width: 13rem;
+          }
+
+          .content-image:hover {
+             box-shadow: 3px 3px 20px #333333ea;
+          }
+
+          .content-image.exactTime {
+             background-image: url('../../../../public/assests/pages/ExactTime.png');
+          }
+          .content-image.artProject {
+             background-image: url('../../../../public/assests/pages/Art.png');
+          }
+          .content-image.coventry {
+             background-image: url('../../../../public/assests/pages/Coventry.png');
+          }
+       }
     }
-}
+ }
