--- a/src/components/Works/style.scss
+++ b/src/components/Works/style.scss
@@ -27,9 +27,6 @@
         font-size: 16px;
     }
 
-    
-    
-
     /* From Uiverse.io by satyamchaudharydev */
     /* inspired form gumroad website */
     a {
@@ -74,7 +71,6 @@
     .button-2 {
         grid-column: 3;
         --bg: #000;
-        --hover-bg: #ff90e8;
         --hover-text: #e0e0e0;
         color: #fff;
         cursor: pointer;
@@ -82,6 +78,9 @@
         border-radius: 4px;
         width: 40px;
         height: 38px;
+        align-items: center;
+        justify-content: center;
+        display: flex;
         text-align: center;
         font-size: 20px;
         margin-left: 5px;
