--- a/src/components/Slider/slider.scss
+++ b/src/components/Slider/slider.scss
@@ -34,12 +34,14 @@
                     font-size: 5rem;
                     font-weight: bold;
                     line-height: 1.3em;
+                    text-shadow: 3px 3px 2px #333;
                 }
 
                 .type {
                     font-size: 5rem;
                     font-weight: bold;
                     line-height: 1.3em;
+                    text-shadow: 1px 1px 2px #333;
                     color: #14ff72cb;
                 }
 
